Khan-Academy/css/index.css
/* ... */
/* #endregion Courses Dropdown */

/* #endregion Nav */

main > section {
	overflow: auto;
	margin: auto;
	margin-top: 5rem;
}

/* #region Hero */

main > section:nth-of-type(1) {
	max-width: 1200px;
	overflow: auto;
	margin: auto;
	margin-top: 5rem;
	position: relative;
}

main > section:nth-of-type(1) > svg {
	float: left;
	width: 55%;
	padding-left: 7.5%;
	padding-right: 2.5%;
}

main > section:nth-of-type(1) > svg:nth-of-type(2) {
	display: none;
	position: absolute;
	right: 0;
	top: -5%;
	z-index: -1;
	height: 100%;
	padding: 0;
}

main > section:nth-of-type(1) > div {
	float: left;
	width: 45%;
}
main > section:nth-of-type(1) > div > svg{
	display: none;
	position: absolute;
	width: 75vw;
	top: -15%;
	left: -15%;
}

main > section:nth-of-type(1) > div > * {
	margin-top: 2.5rem;
}

main > section:nth-of-type(1) > div > h1 {
	font-family: 'Source Serif Pro', serif;
	font-weight: bold;
	font-size: 53px;
}


@media (max-width: 600px) {
	main > section:nth-of-type(1) > svg {
		display: none;
	}
	main > section:nth-of-type(1) > svg:nth-of-type(2) {
		display: block;
	}

	main > section:nth-of-type(1) > div {
		float: none;
		width: 65%;
		margin-top: 33vh;
	}
	main > section:nth-of-type(1) > div > svg{
		display: block;
	}

	main > section:nth-of-type(1) > div > h1 {
		position: relative;
		font-size: 30px;
	}
}

p {
	font-family: 'Lato', sans-serif;
	line-height: 2rem;
}

main section:nth-of-type(1) nav ul {
	list-style: none;
	padding: 0;
}

main section:nth-of-type(1) nav ul li {
	display: inline-block;
}

main section:nth-of-type(1) nav ul li a {
	color: white;
	background-color: rgb(24, 101, 242);
	padding: 0.5rem;
	border-radius: 0.25rem;
	text-decoration: none;
	font-size: 14px;
	margin-right: 0.1rem;
}

main section:nth-of-type(1) nav ul li a:is(:hover, :focus, :active) {
	box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px #1865f2 !important
}


@keyframes realResultsSwoosh {
	to {
		stroke-dashoffset:0;
	}
}

main section:nth-of-type(1) div h1 svg path {
	animation: realResultsSwoosh ease-in-out forwards;
}

main section:nth-of-type(1) div h1 + p {
	margin-top: -2.5rem;
}

main section:nth-of-type(1) div h1 svg {
	position: relative;
	top: -2rem;
	width: 15rem;
	left: -0.5rem
}

@media (max-width: 600px) {
	main section:nth-of-type(1) div h1 svg {
		position: relative;
		top: -1rem;
		width: 9rem;
		left: -0.5rem
	}
}

/* #endregion Hero */

main > section:nth-of-type(2) {
	text-align: center;
	position: relative;
	padding: 2.5rem 0;
}

main section:nth-of-type(2) svg {
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	bottom: 0;
	z-index: -1;
	height: 100%;
	width: 100%;
}

main section:nth-of-type(2) h2 {
	font-family: 'Source Serif Pro', serif;
	font-weight: bold;
	font-size: 44px;
}

main section:nth-of-type(2) section {
	float: left;
	width: 20%;
	text-align: center;
}
main section:nth-of-type(2) section:nth-of-type(1) {
	margin-left: 20vw;
}

@media (max-width: 800px) {
	main section:nth-of-type(2) section {
		float: none;
		width: 50%;
		margin: auto;
		margin-top: 3rem;
	}
	main section:nth-of-type(2) section:nth-of-type(1) {
		margin-left: auto;
	}
}

main section:nth-of-type(2) section img {
	height: 7rem;
}
main section:nth-of-type(2) section p {
	font-family: 'Lato', sans-serif;
	font-size: 16px;
	line-height: 26px;
}



main section:nth-of-type(2) h3 {
	font-family: 'Source Serif Pro', serif;
	font-size: 25px;
	font-weight: normal;
}


main > section:nth-of-type(3) {
	max-width: 1200px;
	overflow: hidden;
	margin: auto;
	margin-top: 5rem;
	position: relative;
}

main > section:nth-of-type(3) > svg {
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	right: 0;
	width: 55%;
}

main > section:nth-of-type(3) > div {
	margin-left: 3rem;
	margin-bottom: 3rem;
}

@media (max-width: 800px) {
	main > section:nth-of-type(3) > svg {
		float: none;
		width: auto;
		transform: none;
		position: relative;
	}
	main > section:nth-of-type(3) > div {
		float: none;
		width: auto;
	}
}

main > section:nth-of-type(3) > div > * {
	margin-top: 2.5rem;
}

main > section:nth-of-type(3) > div > span {
	text-transform: uppercase;
	font-size: 14px;
	color: rgba(33, 36, 44, 0.64);
}
main > section:nth-of-type(3) > div > h2 {
	position: relative;
	font-family: 'Source Serif Pro', serif;
	font-weight: bold;
	font-size: 44px;
}
main > section:nth-of-type(3) > div > h2 div {
	position: relative;
}
main > section:nth-of-type(3) > div > h2 svg {
	width: 20rem;
	position: absolute;
	top: -1.5rem;
	left: -1.75rem;
	z-index: -1;
}


main > section:nth-of-type(3) p {
	width: 24rem;
	margin-top: -1rem;
	font-family: 'Lato', sans-serif;
	font-size: 18px;
}

@keyframes keyframe_zfv6xh {
	to {
		stroke-dashoffset:0;
	}
}
._t1oee9 {
	animation: keyframe_zfv6xh ease-in-out forwards;
}


main section:nth-of-type(3) a {
	font-weight: bold;
	text-decoration: none;
	color: #1865F2;
}
main section:nth-of-type(3) a:is(:hover, :active, :focus) {
	text-decoration: underline;
}

main section:nth-of-type(3) p + a {
	font-family: 'Lato', sans-serif;
	color: white;
	background-color: rgb(24, 101, 242);
	padding: 0.75rem;
	border-radius: 0.25rem;
	text-decoration: none;
	font-size: 14px;
	margin-right: 0.1rem;
}

main section:nth-of-type(3) p + a:is(:hover, :focus, :active) {
	box-shadow: 0 0 0 1px #ffffff, 0 0 0 3px #1865f2 !important
}


main > section:nth-of-type(4) {
	max-width: 1200px;
	overflow: hidden;
	margin: auto;
	margin-top: 5rem;
}

main > section:nth-of-type(4) > svg {
	float: left;
	width: 50%;
}

main > section:nth-of-type(4) > div {
	float: left;
	width: 45%;
	margin-left: 1rem;
	height: 28rem;
	overflow: hidden;
}

@media (max-width: 800px) {
	main > section:nth-of-type(4) > svg {
		float: none;
		width: auto;
	}
	main > section:nth-of-type(4) > div {
		float: none;
		width: auto;
	}
}

main > section:nth-of-type(4) > div > span:nth-of-type(1) {
	text-transform: uppercase;
	font-size: 14px;
	color: rgba(33, 36, 44, 0.64);
}
/* ... */

